AC_INIT([Luogu3], [0.1.0], [https://github.com/sjx233/luogu3-lang/issues], [luogu3-lang], [https://github.com/sjx233/luogu3-lang])
AM_INIT_AUTOMAKE([-Wall foreign])
AC_PROG_CXX
AM_PROG_AR
LT_INIT
AC_SUBST([LIBTOOL_DEPS])
AC_CHECK_HEADER_STDBOOL
AC_CONFIG_MACRO_DIRS([m4])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
  Makefile
  src/Makefile
])
AC_OUTPUT
